<resources>
    <string name="app_name">BASE-PROJECT</string>

    <string name="exception_socket_time_out">Unable to communicate with server</string>
    <string name="internal_server_error">Server not responding</string>
    <string name="no_internet_connection">No access to the Internet</string>
    <string name="unknown_error">Unknown error</string>

    <string name="common_yes">Yes</string>
    <string name="common_cancel">Cancel</string>

    <string name="press_back_again">Press the back key to exit again</string>
    <string name="exit_app_dialog_title">Do you want to exit the app?</string>
    <string name="quwi">QUWI</string>
    <string name="common_name">Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="common_done">Done</string>
    <string name="common_login">Login</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="signup">SIGNUP</string>
    <string name="login">LOGIN</string>
    <string name="error">Error</string>
    <string name="value_can_not_be_blank">%s can not be blank</string>
    <string name="common_retry">Retry</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="messages">Messages</string>
    <string name="sign_out">Sign out</string>

</resources>